fix event overflow

--- a/assets/styles/prog.scss
+++ b/assets/styles/prog.scss
@@ -7,6 +7,7 @@
   }
   .calendar-event {
     overflow: hidden;
+    height: inherit;
     .event-header {
       display: flex;
       justify-content: space-between;
